static/styles/teaorbit.css
body, html { height: 100%; background: #333; margin: 0; padding: 0; color: #aaa; font-family: 'PT Mono',monospace; position: relative; overflow: hidden; }

a, a:visited { color: #fff; text-decoration: none; }
a:hover { border-bottom: 1px solid #666; }

#loader { position: fixed; top: 0; left: 0; background: rgba(100,100,100,0.8); height: 100%; width: 100%; text-align: center; z-index: 200; display: none; }
#loader .loader-icon { position: absolute; height: 150px; top: 50%; margin-top: -75px; left: 50%; margin-left: -250px; width: 500px; background: rgba(255,255,255,0.5); color: #fff; text-shadow: 2px 2px 0 #000; box-shadow: 2px 2px 0 #000; }
#loader .inner { padding: 30px; }
#loader .details { font-size: 12px; line-height: 20px; text-shadow: 1px 1px 0 #000; }
#loader .title { line-height: 30px; font-size: 30px; margin-bottom: 15px; }
#loader .title .error {  text-shadow: 2px 2px 0 #a00; }

#header { position: absolute; top: 0; left: 0; width: 100%; background: #000; z-index: 100; font-size: 14px; font-weight: normal; }
#header h1 { margin: 0 0 0 20px; padding: 0 30px 0 0; line-height: 50px; font-size: 25px; }
#header h1 a:hover { border: none; }
#header h1 a:hover img { background: #555; }
#header h1 a img { width: 40px; height: 40px; background: #333; border-radius: 50%; display: block; float: left; border: 5px solid #000; margin: 0 0 0 -10px; }
#header h1 a span { margin-left: 10px; }

#header .button, #header .info { float: right; line-height: 50px; padding: 0 20px 0 20px; margin-left: 1px; }
#header .button { background: #444; }
#header .button:hover, #header .button.show { background: #777; }

#show-map img.map { display: inline-block; width: 50px; height: 50px; vertical-align: middle; margin-left: 20px; margin-right: -20px; }

#post { position: absolute; bottom: 0; left: 0; background: #000; width: 100%; z-index: 100; }
#post .inner { margin: 15px; position: relative; }
#post input, #post textarea, #post button { background: #333; border: 1px solid transparent; border-bottom: 1px solid #555; height: 21px; color: #fff; border-radius: 2px; padding: 3px 10px; font-family: 'PT Mono', monospace; line-height: 21px; display: inline-block; vertical-align: middle; font-size: 13px; }
#post textarea.expanding { line-height: 17px; }
#post textarea { width: 65%; vertical-align: bottom; }
#post .submit { display: none; }

#post form { padding-left: 30px; }
.color { display: inline-block; height: 16px; width: 16px; border-radius: 8px; position: absolute; left: 5px; top: 5px; }
#my-color { bottom: 7px; top: auto; }

input#type-here { width: 60% }
input#name { width: 20%; }
#submit { padding-right: 8px; }

#chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: scroll; z-index: 50; font-size: 13px; -webkit-overflow-scrolling: touch; -webkit-text-size-adjust: none;  }
#chat .inner { padding: 30px; }
.message { background: rgba(255,255,255,0.1); padding: 5px 10px 5px 30px; border-radius: 3px; display: inline-block; margin: 2px 0;  position: relative; line-height: 16px; min-height: 16px; font-size: 13px; max-width: 90%; white-space: pre-wrap; word-wrap: break-word; }
.date { display: inline-block; color: #444; font-size: 12px; margin-left: 5px; -webkit-text-size-adjust: none; }
.row:hover .date { color: #aaa; }
.row:hover .message { color: #ccc; }
.row:hover .name { color: #aaa; }
.row:hover a { border-bottom: 1px solid #aaa; }
.row a:hover { border-bottom: 1px solid #fff; }
.name { color: #888; margin-right: 3px; }
.name:before { content: "[" }
.name:after { content: "] " }


#channels { position: absolute; right: 0; bottom: 0; overflow: auto; z-index: 50; min-width: 30px; background: rgba(0,0,0,1); }
#channels .inner { padding: 10px 0; display: none; }
#channels a.toggle { line-height: 30px; padding: 0 10px; color: #999; margin: 0; display: block; }
#channels a.toggle:hover { color: #fff; }
#channels a.toggle.expanded { border-bottom: 1px solid #777; }

#channels .toggle:before { content: "▲";margin-right: 10px; }
#channels .toggle.expanded:before { content: "▼ recent channels"; margin-right: 10px;  }

#channels .channel { line-height: 20px; padding: 0 10px;}
#channels .channel:hover { border-bottom: 1px solid #444; margin: -1px 0 -1px 0; border-top: 1px solid #444; background: #222; }
#channels .channel .current { float: right; margin-left: 15px; margin-right: 25px; color: rgba(255,255,255,0.4); }
#channels .channel .remove { float: right; color: #aaa; display: inline-block; line-height: 14px; font-size: 18px; width: 14px; background: rgba(255,255,255,0.3); text-align: center; border-radius: 7px; margin: 3px 5px 2px 15px; }
#channels .channel .remove:hover { color: #faa; background: rgba(255,255,255,0.5); cursor: pointer; }
#channels .channel a { color: #999; }
#channels .channel a:hover { color: #fff; border: none; }


#audio { float: right; display: inline-block; line-height: 50px; cursor: pointer; }
#audio:hover { color: #fff; }

#map-expanded { display: none; position: fixed; top: 50px; right: 0; background: #777; padding: 20px; text-align: center; z-index: 100; color: #ddd; }
#map-expanded img.map { display: inline-block; width: 350px; height: 350px; vertical-align: middle; margin: 12px; box-shadow: 0 0 5px 0 rgba(0,0,0,0.5); }
#map-expanded.show { display: block; }

#num-online { cursor: pointer; }
#num-online:hover { color: #fff; }
#online-users { padding: 10px 20px; background: #000; display: none; z-index: 200; position: relative; }

#drawing {  background: #fff; }

@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 568px) { 
    #header { height: 30px; padding: 0; }
    #header h1 { margin: 0; padding: 0 30px; line-height: 30px; font-size: 12px; padding: 0 15px; }
    #header h1 a span { display: inline-block; width: 0px; height: 30px; overflow:hidden; }

    #header h1 a img { width: 30px; height: 30px; background: #333; border-radius: 50%; display: block; float: left; border: 5px solid #000; margin: 0 0 -20px -10px; }

    #audio { line-height: 30px; }
    #show-map { display: inline-block; max-width: 120px; overflow: hidden; text-overflow:ellipsis; }
    #show-map img.map { margin-right: -10px; margin-left: 10px; }
    #num-users { display: inline-block; line-height: 30px; } 
    #header .button, #header .info { line-height: 30px; font-size: 12px; padding: 0 10px; }
    #header img.map {  height: 30px; width: 30px; }
    #map-expanded { top: 30px; }
    #map-expanded img.map { width: 250px; height: 250px; }

    #post .inner { margin: 5px 10px; }
    #post input, button { display: block; }
    #post button { position: absolute; top: 0; right: 0; height: 30px; padding: 0 10px; text-align: center; }
    #post textarea[name='spiel'] {  width: 90%; }
    #post input[name='name'] {  width: 90%; }
    #my-color { top: 7px; bottom: auto; }

    #chat .date { display: none; color: #444; font-size: 12px; margin-left: 5px; }
    #chat .inner { padding: 15px; }
}

img.disabled-desaturate {
    -webkit-filter: grayscale(1); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%);
    filter: gray; filter: grayscale(100%);
    filter: url(desaturate.svg#greyscale);
}

